# siri_parser

./: .gitignore  Cargo.toml  README.md  build.rs  generation.go  update_version.sh
.github/workflows/: CI_golang.yml  CI_rust.yml  python_workflow.yml
derives/: Cargo.toml
derives/src/: lib.rs
go/: generation.go  go.mod  main.go
go/enums/: service_type.go
go/models/: body.go  envelope.go  service_delivery_info.go
go_generation_derive/: Cargo.toml  build.rs
go_generation_derive/src/: lib.rs
parser/: Cargo.toml  generation.go
parser/src/: lib.rs
parser/tests/: integration_test.rs
parser_unsafe/: Cargo.toml
parser_unsafe/src/: lib.rs
siri_parser_python/: Cargo.toml  pyproject.toml
siri_parser_python/src/: lib.rs
src/: lib.rs  main.rs
src/deliveries/: connection_monitoring_delivery.rs  estimated_time_table_delivery.rs  facility_monitoring_delivery.rs  general_message_delivery.rs  production_timetable_delivery.rs  situation_exchange_delivery.rs  situation_monitoring_delivery.rs  stop_monitoring_delivery.rs  vehicle_monitoring_delivery.rs
src/enums/: arrival_status.rs  audience.rs  boarding_activity.rs  conditions.rs  coordinates.rs  counted_feature_unit.rs  counting_type.rs  departure_status.rs  end_time_status.rs  environment_reason.rs  environment_weather_subreason.rs  equipment_reason.rs  equipment_sub_reason.rs  facility_availability.rs  facility_class.rs  mod.rs  monitoring_error.rs  occupancy.rs  personne_sub_reason.rs  personnel_reason.rs  progress_status.rs  quality_index.rs  reason.rs  scope_type.rs  sensitivity.rs  severity.rs  (+5 more)
(+153 files in other folders)
