[package]
name = "siri_et_parser"
version = "0.1.7"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
quick-xml = {version = "0.37.0", features = ["serialize"]}
chrono = { version = "0.4.38", features = ["serde"] }
parser = { path = "parser" }
