[package]
name = "siri_et_parser"
version = "0.1.8"
edition = "2021"
build = "build.rs"

[workspace]
members = ["parser", "go_generation_derive", "parser_unsafe", "siri_parser_python"]

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
quick-xml = {version = "0.37.1", features = ["serialize"]}
chrono = { version = "0.4.38", features = ["serde"] }
parser = { path = "parser" }


